objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Global_Company_Fortune_1000_Rank__c</fullName>
        <label>Global Company Fortune 1000 Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Company_Name__c</fullName>
        <label>Global Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Company_Success_Champion__c</fullName>
        <label>Global Company Success Champion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Company_Success_Lead__c</fullName>
        <label>Global Company Success Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KickBox_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KickBox Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Accept_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Accept All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Did_You_Mean__c</fullName>
        <label>Kickbox Did You Mean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickbox_Disposable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Disposable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickbox Free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickbox_Reason__c</fullName>
        <label>Kickbox Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>low_deliverability</fullName>
                </value>
                <value>
                    <fullName>accepted_email</fullName>
                </value>
                <value>
                    <fullName>low_quality</fullName>
                </value>
                <value>
                    <fullName>rejected_email</fullName>
                </value>
                <value>
                    <fullName>unavailable_smtp</fullName>
                </value>
                <value>
                    <fullName>no_connect</fullName>
                </value>
                <value>
                    <fullName>invalid_domain</fullName>
                </value>
                <value>
                    <fullName>unexpected_error</fullName>
                </value>
                <value>
                    <fullName>timeout</fullName>
                </value>
                <value>
                    <fullName>invalid_email</fullName>
                </value>
                <value>
                    <fullName>invalid_smtp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kickbox_Result__c</fullName>
        <label>Kickbox Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>risky</fullName>
                </value>
                <value>
                    <fullName>deliverable</fullName>
                </value>
                <value>
                    <fullName>undeliverable</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kickbox_Sendex__c</fullName>
        <label>Kickbox Sendex</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_In__c</fullName>
        <label>Last Call In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Call_Out__c</fullName>
        <label>Last Call Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Data_Alert_Found__c</fullName>
        <label>Last Data Alert Found</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Sent__c</fullName>
        <label>Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Meeting__c</fullName>
        <label>Last Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>This field is used in the formula field Round_Robin_ID to assign leads to different people automatically with assignment rules.</description>
        <displayFormat>{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Request__c</fullName>
        <label>Lead Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Used to get a granular look at our EBQ campaigns for each lead source and across both leads and contacts.</description>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_the_Business__c</fullName>
        <label>Left the Business</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <label># Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <label>Linkedin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lusha__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lusha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the Lead is MQL</description>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketer_comments__c</fullName>
        <label>Marketer comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketer_status__c</fullName>
        <label>Marketer status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CREATE</fullName>
                </value>
                <value>
                    <fullName>UPDATE</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
                <value>
                    <fullName>NO CHANGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Email_Filter__c</fullName>
        <formula>ISBLANK(EmailBouncedDate)</formula>
        <label>Mass Email Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Type_CP__c</fullName>
        <description>Meeting Type (as setup under Meeting Types - Templates)</description>
        <label>Meeting Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modigie__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modigie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Contact__c</fullName>
        <label>Next Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Meeting__c</fullName>
        <label>Next Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <inlineHelpText>This field does not get mapped to the opportunity.</inlineHelpText>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Show_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prospect didn’t show up. Maps against no show button</description>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Orgs__c</fullName>
        <description>Number of orgs in the production environment.</description>
        <inlineHelpText>Number of orgs in the production environment.</inlineHelpText>
        <label>No. of Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OA__CLOSED_ACTIVITIES__c</fullName>
        <label>Closed Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step_Date__c</fullName>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OA__Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OA__OPEN_ACTIVITIES__c</fullName>
        <label>Open Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <description>This field is used for the batch lead conversion and should be left blank.</description>
        <label>OrgId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orgs_Managed__c</fullName>
        <label>Orgs Managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Actively_being_sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if a Prospect is Active in a sequence.</description>
        <label>Actively being sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Name__c</fullName>
        <label>Current Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Status__c</fullName>
        <label>Current Sequence Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Number__c</fullName>
        <label>Current Sequence Step Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Step_Type__c</fullName>
        <label>Current Sequence Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_Task_Due_Date__c</fullName>
        <label>Current Sequence Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outreach_Current_Sequence_User_Name__c</fullName>
        <description>This field lists the name of the sequencer.</description>
        <label>Current Sequence User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Finished_Sequence__c</fullName>
        <description>Imports a list of sequences the Prospect has finished in comma-spearated format.
Note: Requires mapping the Finished Sequence field in Salesforce.</description>
        <label>Finished Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Sequences__c</fullName>
        <description>This field lists how many sequences the Prospect is currently active in.</description>
        <label>Number of Active Sequences</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Number_of_Active_Tasks__c</fullName>
        <description>This field lists how many incomplete tasks are associated with the Prospect.</description>
        <label>Number of Active Tasks</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Tag__c</fullName>
        <label>Pardot Tag</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Prospect_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from Lead Field to Parent/Global Prospect Company</description>
        <label>Parent Prospect Company</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Make sure you are searching for a global/parent company.</errorMessage>
            <filterItems>
                <field>Prospect_Company__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Global Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Prospect_Company__c</referenceTo>
        <relationshipLabel>Leads (Parent Prospect Company)</relationshipLabel>
        <relationshipName>ParentProsLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect Company</label>
        <referenceTo>Prospect_Company__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_unqualified__c</fullName>
        <inlineHelpText>Can&apos;t find the reason you&apos;re looking for? Select &quot;Other&quot; and email you SF admin to add a new picklist value for you</inlineHelpText>
        <label>Reason unqualified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid/fake contact information</fullName>
                </value>
                <value>
                    <fullName>Could not reach after 7 touches</fullName>
                </value>
                <value>
                    <fullName>Kicking Tires</fullName>
                </value>
                <value>
                    <fullName>Their is no need / company is too small</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <description>Generates the number that will be used in assignment rules to assign Leads to different users.</description>
        <formula>MOD(VALUE(Lead_Number__c) ,3)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_DB_Type__c</fullName>
        <label>SFDC DB Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Account Executive</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIGSTR__R_Score__c</fullName>
        <label>R Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__SigstrSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SigstrSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Administrators__c</fullName>
        <label>Salesforce Administrators</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_interest__c</fullName>
        <label>Subscription interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Branch Management</fullName>
                </value>
                <value>
                    <fullName>Selenium Testing</fullName>
                </value>
                <value>
                    <fullName>Continuous Integration</fullName>
                </value>
                <value>
                    <fullName>Agile Delivery</fullName>
                </value>
                <value>
                    <fullName>Compliance Hub</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Copado Academy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Architect__c</fullName>
        <label>Tech Architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tocca_Token__c</fullName>
        <externalId>true</externalId>
        <label>Tocca Token</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Turn_VR_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do not use unless you are an admin.</inlineHelpText>
        <label>Turn VR Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign__c</fullName>
        <label>UTM Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Content__c</fullName>
        <label>UTM Content</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Medium__c</fullName>
        <label>UTM Medium</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Source__c</fullName>
        <label>UTM Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Term__c</fullName>
        <label>UTM Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Prop_ID__c</fullName>
        <label>Value Prop ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <description>If Lead Source is &quot;Web&quot; we want to know from which page they came.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Industry__c</fullName>
        <label>6s Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Code__c</fullName>
        <label>6s NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_NAICS_Description__c</fullName>
        <label>6s NAICS Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Revenue_Range__c</fullName>
        <label>6s Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Code__c</fullName>
        <label>6s SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_SIC_Description__c</fullName>
        <label>6s SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Segments__c</fullName>
        <label>6s Segments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Title_Function__c</fullName>
        <label>6s Title Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Title_Level__c</fullName>
        <label>6s Title Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6s_Updated__c</fullName>
        <label>6s Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountBuyingStage6sense_Copado__c</fullName>
        <label>6sense Account Buying Stage Copado</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountIntentScore6sense_Copado__c</fullName>
        <label>6sense Account Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountProfileFit6sense_Copado__c</fullName>
        <label>6sense Account Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountProfileScore6sense_Copado__c</fullName>
        <label>6sense Account Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_30_Days__c</fullName>
        <label>Ebsta Score Trend Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_7_Days__c</fullName>
        <label>Ebsta Score Trend Last 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score_Trend_Last_90_Days__c</fullName>
        <label>Ebsta Score Trend Last 90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Ebsta_Score__c</fullName>
        <label>Ebsta Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Ebsta_Stats_Update__c</fullName>
        <label>Last Ebsta Stats Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_Email_Activity_Date__c</fullName>
        <label>Last Email Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_month_emails_exchanged_inbound__c</fullName>
        <label>Last month emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_month_emails_exchanged_outbound__c</fullName>
        <label>Last month emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_week_emails_exchanged_inbound__c</fullName>
        <label>Last week emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Last_week_emails_exchanged_outbound__c</fullName>
        <label>Last week emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Out_of_office_until__c</fullName>
        <description>Ebsta out of office field.</description>
        <label>Out of office until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_emails_exchanged_inbound__c</fullName>
        <label>Total emails exchanged inbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Total_emails_exchanged_outbound__c</fullName>
        <label>Total emails exchanged outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Best_Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Best Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain_In_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain In Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain_Key__c</fullName>
        <label>Clean Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain_Last_Updated_At__c</fullName>
        <label>Domain Last Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Domain__c</fullName>
        <formula>IF(NOT(ISBLANK( Website )), 
	IF(OR(BEGINS(Website, &quot;http://www&quot;),BEGINS(Website, &quot;https://www&quot;), BEGINS(Website, &quot;www.&quot;)), 
	SUBSTITUTE(Website, LEFT(Website, FIND(&quot;.&quot;, Website)), NULL), 

	IF(BEGINS(Website, &quot;http://&quot;), 
	MID(Website, FIND(&apos;http://&apos;, Website, 1)+7, (LEN(Website) - FIND(&apos;http://&apos;, Website, 1)+7)), 

	IF(BEGINS(Website, &quot;https://&quot;), 
	MID(Website, FIND(&apos;https://&apos;, Website, 1)+8, (LEN(Website) - FIND(&apos;https://&apos;, Website,1)+8)), 
	Website))),

	IF(NOT(ISBLANK(Email)), 
	IF( 
	CONTAINS(Email, &quot;gmail&quot;) || CONTAINS(Email, &quot;yahoo&quot;) || CONTAINS(Email, &quot;hotmail&quot;) || CONTAINS(Email, &quot;outlook&quot;), NULL, SUBSTITUTE(Email, LEFT(Email, FIND( &quot;@&quot;, Email)), NULL) 
	), NULL)
)</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__RoutingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Rule</label>
        <referenceTo>fcio1__QueueParticipant__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>leadGrade6sense_Copado__c</fullName>
        <label>6sense Lead Grade Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadIntentScore6sense_Copado__c</fullName>
        <label>6sense Lead Intent Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadProfileFit6sense_Copado__c</fullName>
        <label>6sense Lead Profile Fit Copado</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadProfileScore6sense_Copado__c</fullName>
        <label>6sense Lead Profile Score Copado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadUpdateDate6sense_Copado__c</fullName>
        <label>6sense Lead Update Date Copado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Counter__c</fullName>
        <label>Gift Budget Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Budget_Limit__c</fullName>
        <label>Gift Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Counter__c</fullName>
        <label>Gift Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Number_Limit__c</fullName>
        <label>Gift Number Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lnt__Gift_Status__c</fullName>
        <label>Gift Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__Marketing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Test_Custom_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Custom User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lnt__Thank_You_Note__c</fullName>
        <label>Thank You Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lnt__testDate__c</fullName>
        <label>testDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit__c</fullName>
        <label>MK Customer Fit</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_score__c</fullName>
        <label>MK Customer Fit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_segment__c</fullName>
        <label>MK Customer Fit Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_customer_fit_signals__c</fullName>
        <label>MK Customer Fit Signals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mk_lead_grade_score__c</fullName>
        <label>MK Lead Grade Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_lead_grade_segment__c</fullName>
        <label>MK Lead Grade Segment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_likelihood_to_buy_score__c</fullName>
        <label>MK Likelihood To Buy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mk_likelihood_to_buy_segment__c</fullName>
        <label>MK Likelihood To Buy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mk_recent_activity__c</fullName>
        <label>MK Recent Activity</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Phone_Available__c</fullName>
        <label>Alternate Mobile Phone Number Available</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Alternate_Mobile_Phone_Number_Available__c</fullName>
        <formula>CASE( modigie__Alternate_Mobile_Phone_Available__c, &apos;Yes&apos;, IMAGE(&quot;/resource/modigie__Yes_word_image&quot;, &quot;Yes Image&quot;,12,22), &apos;No&apos;, IMAGE(&quot;/resource/modigie__No_Word_Image&quot;, &quot;No Image&quot;,10,20) ,&apos;&apos;)</formula>
        <label>Alternate Mobile Phone Number Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>modigie__Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>modigie__Enable_Validate_Employer_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Validate Employer Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__Is_Dynamic_Criteria_Field_Values_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dynamic Criteria Field Values Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>modigie__ModigieValidatedNumberCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ModigieValidatedNumberCheck</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>